--- a/autoTypedText.html
+++ b/autoTypedText.html
@@ -9,6 +9,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Fira+Sans:wght@300&family=Lato&family=Tinos&display=swap" rel="stylesheet">
+    <!-- JQUERY -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+
     <script src="autoTypedText.js" defer></script>
     <title>Portfolio</title>
 </head>
@@ -18,5 +21,6 @@
         <h1 id="automatedText"></h1>
         <h5 class="elementType"></h5>
     </div>
+    <div id="backgroundTag"></div>
 </body>
 </html>
