Typescript added (unfinished)

--- a/autoCoder/window.html
+++ b/autoCoder/window.html
@@ -27,20 +27,23 @@
                     &lt;<span class="element">meta <span class="attribute">charset</span></span>=<span class="attributeValue">"UTF-8"</span>&gt; <br>
                     &lt;<span class="element">meta</span> <span class="attribute">http-equiv</span>=<span class="attributeValue">"X-UA-Compatible"</span> <span class="element">content</span>=<span class="attributeValue">"IE=edge"</span>&gt; <br>
                     &lt;<span class="element">meta</span> <span class="attribute">name</span>=<span class="attributeValue">"viewport"</span> <span class="attribute">content</span>=<span class="attributeValue">"width=device-width, initial-scale=1.0"</span>&gt; <br>
-                    &lt;<span class="element">title</span>&gt;xZitt&lt;<span class="element">title</span>/&gt;<br>
+                    &lt;<span class="element">title</span>&gt;xZitt&lt;/<span class="element">title</span>&gt;<br>
+                    &lt;<span class="element">link</span> <span class="attribute">rel</span>=<span class="attributeValue">"stylesheet"</span> <span class="attribute">href</span>=<span class="attributeValue">"style.css"</span>&gt; <br>
+                    &lt;<span class="element">script</span> <span class="attribute">src</span>=<span class="attributeValue">"script.js"</span> <span class="attribute">defer</span>&gt;&lt;/<span class="element">script</span> &gt;
                 </div>
                 &lt;<span class="element">head</span>/&gt; <br>
                 &lt;<span class="element">body</span>&gt; <br>
 
                 <div id="typingContainer">
-                    <div id="autoTyper"></div><div id="div-element-as-text">&lt;<span class="element">h1 <span class="attribute">id</span></span>=<span class="attributeValue">"heading"</span>&gt;<span id="backElement">&lt;<span class="element">h1</span>/&gt;</span></div><div id="cursor">|</div>
+                    <div id="autoTyper"></div><div id="div-element-as-text">&lt;<span class="element">h1 <span class="attribute">id</span></span>=<span class="attributeValue">"heading"</span>&gt;<span id="backElement"><div id="cursor">|</div>&lt;<span class="element">h1</span>/&gt;</span></div>
                 </div>
                 &lt;<span class="element">body</span>/&gt; <br>
                 &lt;<span class="element">html</span>/&gt;
             </div>
             <!-- TYPESCRIPT as TEXT -->
             <div id="typescript">
-                    <span class="element">const <span class="attribute">heading</span></span> = <span class="documentColor">document</span>.<span class="selectorColor">querySelector</span><span class="gold">&lt;</span><span class="ts-type">HTMLHeadElement</span><span class="gold">&gt;</span><span class="gold">(</span><span class="attributeValue">'#heading'</span><span class="gold">)</span>
+                    <span class="element">const <span class="attribute">heading</span></span> = <span class="documentColor">document</span>.<span class="selectorColor">querySelector</span><span class="gold">&lt;</span><span class="ts-type">HTMLHeadElement</span><span class="gold">&gt;</span><span class="gold">(</span><span class="attributeValue">'#heading'</span><span class="gold">)</span> <br>
+                    <div id="typescriptText" class="attribute"></div><div class="dot">.</div><div class="textContent element"></div><div id="cursor">|</div>
             </div>
 
     
