--- a/autoCoder/window.html
+++ b/autoCoder/window.html
@@ -17,6 +17,7 @@
                     <li id="minimiseButton"></li>
                     <li id="fullscreenButton"></li>
                 </ul>
+                <div class="windowName-input">index.html</div>
             </div>
             <div id="textContent">
                 <!-- HTML TEXT as TEXT -->
@@ -44,15 +45,11 @@
                 &lt;<span class="element">html</span>/&gt;
             </div>
 
-
-
-
             <!-- TYPESCRIPT as TEXT -->
             <div id="typescript">
                     <span class="element">const <span class="attribute">heading</span></span> = <span class="documentColor">document</span>.<span class="selectorColor">querySelector</span><span class="gold">&lt;</span><span class="ts-type">HTMLHeadElement</span><span class="gold">&gt;</span><span class="gold">(</span><span class="attributeValue">'#heading'</span><span class="gold">)</span> <br>
                     <div id="typescriptText" class="attribute"></div><div class="dot">.</div><div class="textContent attribute"></div><div class="equal-element"> = </div><div class="typescriptTextContent attributeValue"></div><div id="cursor">|</div>
             </div>
-
 
                   <!-- SCSS as TEXT -->
             <div id="scss">
@@ -85,6 +82,7 @@
                     <li id="minimiseButton"></li>
                     <li id="fullscreenButton"></li>
                 </ul>
+                <div class="windowName-output">xZitt</div>
             </div>
             <div id="textContentOutput">
                 <h1 id="output-heading">404</h1>
