--- a/3D grid/grid.html
+++ b/3D grid/grid.html
@@ -45,5 +45,10 @@
             <div class="grid-unit unit-5"></div>
         </div>
 
+        <div class="heading-container">
+            <h1 class="text-3d-1">X</h1>
+            <h1 class="text-3d-2">Z</h1>
+        </div>
+        
 </body>
 </html>
