Spinning + hover effect
spinning working but not correctly
hover effect to pause animation

--- a/Skills/skills.html
+++ b/Skills/skills.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="skills.css">
+    <script src="skills.js" defer></script>
     <title>Skill</title>
 </head>
 <body>
@@ -21,6 +22,5 @@
         <div class="skill">API</div>
         <div class="skill">ES5/ES6</div> -->
     </div>
-    
 </body>
 </html>
