--- a/Skills/skills.html
+++ b/Skills/skills.html
@@ -6,21 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="skills.css">
     <script src="skills.js" defer></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Oswald:wght@500&display=swap" rel="stylesheet">
     <title>Skill</title>
 </head>
 <body>
     <div class="skills-container">
-        <div class="skill">Typescript</div>
-        <!-- <div class="skill">HTML</div>
-        <div class="skill">CSS</div>
-        <div class="skill">SCSS</div>
-        <div class="skill">Bootstrap</div>
-        <div class="skill">JQUERY</div>
-        <div class="skill">React</div>
-        <div class="skill">GitHub</div>
-        <div class="skill">JSON</div>
-        <div class="skill">API</div>
-        <div class="skill">ES5/ES6</div> -->
+        <div class="skill typescript">Typescript</div>
+        <div class="skill html">HTML</div>
+        <div class="skill css">CSS</div>
+        <div class="skill scss">SCSS</div>
+        <div class="skill bootstrap">Bootstrap</div>
+        <div class="skill jquery">JQUERY</div>
+        <div class="skill react">React</div>
+        <div class="skill github">GitHub</div>
+        <div class="skill json">JSON</div>
+        <div class="skill api">API</div>
+        <div class="skill es5-es6">ES5/ES6</div>
     </div>
 </body>
 </html>
